# events_video_reconstructor

./: CMakeLists.txt  package.xml  readme.md
config/: inference_options.yaml  inference_params.yaml  params.yaml  rosconsole.conf
include/events_video_reconstructor/: events_video_reconstructor.h
launch/: node.launch
python_bindings/: test_file.py
python_bindings/reconstructor/: fine_tuning.py  fine_tuning_utils.py  fine_tunning.py  hot_pixels.txt  hot_pixels_detector.py  image_reconstructor.py  online_reconstructor.py  run_reconstruction.py
python_bindings/reconstructor/data/: .gitignore
python_bindings/reconstructor/fine_tuned/: .gitignore
python_bindings/reconstructor/pretrained/: .gitignore
python_bindings/reconstructor/utils/: inference_utils.py  loading_utils.py
src/: events_video_reconstructor.cpp
utils/: events_video_reconstructor_node.cpp
