<?xml version="1.0"?>
<package format="2">
  <name>events_video_reconstructor</name>
  <version>0.0.0</version>
  <description>Events Video Reconstructor ROS node</description>

  <maintainer email="dtejero@catec.aero">David Tejero</maintainer>
  <author email="dtejero@catec.aero">David Tejero</author>
  
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>dvs_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>dvs_msgs</exec_depend>

  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>
</package>